--- a/_posts/2024-03-25-dmp.md
+++ b/_posts/2024-03-25-dmp.md
@@ -62,6 +62,7 @@ This equation causes $ x $ to exponentially decay from 1 to 0, dictating the pro
 
 The **transformation system** describes how the motion evolves toward the goal. This part uses the phase variable $ x $ from the canonical system to adjust the movement based on how far along the action is. The transformation system for a single dimension $ y $ (e.g., position of a robot arm in one direction) can be written as:
 
+```latex
 $ \tau \dot{y} = \alpha_y (\beta_y (g - y) - \dot{y}) + f(x) $
 
 - $ y $ represents the position.
@@ -86,6 +87,7 @@ To understand how these equations work, you can consider the role of each part i
 - The canonical system's equation ensures that the movement is timed correctly, with $ x $ acting like a clock.
 - The transformation system's equation dictates the actual path taken by the robot's arm, aiming to minimize the error to the goal $ g $ while following a desired trajectory shaped by $ f(x) $.
 - $ f(x) $, shaped by learning from demonstrations, adds the necessary corrections to the basic motion to mimic the learned behavior accurately.
+```
 
 Using calculus, you'd recognize that these differential equations describe rates of change—how the robot's position and the 'clock' variable change over time. By integrating these rates, you can predict and control the position of the robot's arm through its entire motion from start to finish, ensuring smooth and goal-directed behavior.
 
