--- a/_posts/2024-03-25-dmp.md
+++ b/_posts/2024-03-25-dmp.md
@@ -50,44 +50,42 @@ To explain the mathematics behind Dynamic Movement Primitives (DMPs), let's simp
 
 The **canonical system** in DMPs is typically a simple differential equation that acts like a clock or a phase variable, ensuring that the system evolves smoothly over time. A common form for this is:
 
-$ \tau \dot{x} = -\alpha_x x $
+$$ \tau \dot{x} = -\alpha_x x $$
 
-- $ x $ is the phase variable, often initialized at 1 and decreases to 0.
-- $ \alpha_x $ is a positive constant that determines how quickly $ x $ decays over time.
-- $ \tau $ is a time constant that can scale the duration of the movement.
+- $$ x $$ is the phase variable, often initialized at 1 and decreases to 0.
+- $$ \alpha_x $$ is a positive constant that determines how quickly $$ x $$ decays over time.
+- $$ \tau $$ is a time constant that can scale the duration of the movement.
 
-This equation causes $ x $ to exponentially decay from 1 to 0, dictating the progression of the movement from start to finish.
+This equation causes $$ x $$ to exponentially decay from 1 to 0, dictating the progression of the movement from start to finish.
 
 ### 2. Transformation System
 
-The **transformation system** describes how the motion evolves toward the goal. This part uses the phase variable $ x $ from the canonical system to adjust the movement based on how far along the action is. The transformation system for a single dimension $ y $ (e.g., position of a robot arm in one direction) can be written as:
+The **transformation system** describes how the motion evolves toward the goal. This part uses the phase variable $$ x $$ from the canonical system to adjust the movement based on how far along the action is. The transformation system for a single dimension $$ y $$ (e.g., position of a robot arm in one direction) can be written as:
 
-```latex
-$ \tau \dot{y} = \alpha_y (\beta_y (g - y) - \dot{y}) + f(x) $
+$$ \tau \dot{y} = \alpha_y (\beta_y (g - y) - \dot{y}) + f(x) $$
 
-- $ y $ represents the position.
-- $ g $ is the goal position.
-- $ \alpha_y $ and $ \beta_y $ are gain terms that dictate the stiffness and damping of the system.
-- $ \tau $ adjusts the time scale, similar to its role in the canonical system.
-- $ f(x) $ is a function of the phase variable $ x $ and is used to shape the trajectory.
+- $$ y $$ represents the position.
+- $$ g $$ is the goal position.
+- $$ \alpha_y $$ and $$ \beta_y $$ are gain terms that dictate the stiffness and damping of the system.
+- $$ \tau $$ adjusts the time scale, similar to its role in the canonical system.
+- $$ f(x) $$ is a function of the phase variable $$ x $$ and is used to shape the trajectory.
 
-### 3. Function $ f(x) $
+### 3. Function $$ f(x) $$
 
-The function $ f(x) $ is crucial as it defines the specific shape of the movement trajectory. It's typically modeled as a weighted sum of basis functions:
+The function $$ f(x) $$ is crucial as it defines the specific shape of the movement trajectory. It's typically modeled as a weighted sum of basis functions:
 
-$ f(x) = \frac{\sum_{i=1}^n \psi_i(x) w_i x}{\sum_{i=1}^n \psi_i(x)} $
+$$ f(x) = \frac{\sum_{i=1}^n \psi_i(x) w_i x}{\sum_{i=1}^n \psi_i(x)} $$
 
-- $ \psi_i(x) $ are basis functions (often Gaussian) that activate at different phases of $ x $.
-- $ w_i $ are weights learned from demonstrations.
-- The weights $ w_i $ determine how each basis function influences the movement trajectory.
+- $$ \psi_i(x) $$ are basis functions (often Gaussian) that activate at different phases of $$ x $$.
+- $$ w_i $$ are weights learned from demonstrations.
+- The weights $$ w_i $$ determine how each basis function influences the movement trajectory.
 
 ### Explanation Using Basic Calculus
 
 To understand how these equations work, you can consider the role of each part in controlling a robot's motion:
-- The canonical system's equation ensures that the movement is timed correctly, with $ x $ acting like a clock.
-- The transformation system's equation dictates the actual path taken by the robot's arm, aiming to minimize the error to the goal $ g $ while following a desired trajectory shaped by $ f(x) $.
-- $ f(x) $, shaped by learning from demonstrations, adds the necessary corrections to the basic motion to mimic the learned behavior accurately.
-```
+- The canonical system's equation ensures that the movement is timed correctly, with $$ x $$ acting like a clock.
+- The transformation system's equation dictates the actual path taken by the robot's arm, aiming to minimize the error to the goal $$ g $$ while following a desired trajectory shaped by $$ f(x) $$.
+- $$ f(x) $$, shaped by learning from demonstrations, adds the necessary corrections to the basic motion to mimic the learned behavior accurately.
 
 Using calculus, you'd recognize that these differential equations describe rates of change—how the robot's position and the 'clock' variable change over time. By integrating these rates, you can predict and control the position of the robot's arm through its entire motion from start to finish, ensuring smooth and goal-directed behavior.
 
