--- a/_posts/2024-03-25-dmp.md
+++ b/_posts/2024-03-25-dmp.md
@@ -91,7 +91,7 @@ Using calculus, you'd recognize that these differential equations describe rates
 
 Or to better understand this let's simply this.
 
-Sure, let's simplify the explanation of Dynamic Movement Primitives (DMPs) for a high school student by comparing it to something familiar—learning to throw a ball.
+Still complex? let's simplify the explanation of Dynamic Movement Primitives (DMPs)even further by comparing it to something familiar—learning to throw a ball.
 
 ### Understanding the Concepts
 
