New post and updates

--- a/_posts/2019-01-26-dnm.md
+++ b/_posts/2019-01-26-dnm.md
@@ -6,4 +6,5 @@ summary: Intelligence, Created.
 categories: General
 ---
 
-## Here We begin our journey into creating intelligent machines.
+<img src="https://i.ibb.co/kmdNWwb/dnn.jpg" alt="dnn" border="0">
+## Here We begin our journey into intelligent machines.
