--- a/_posts/2024-06-12-textgrad.md
+++ b/_posts/2024-06-12-textgrad.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: TEXTGRAD - Automatic Differentiation via text to revolutionizing LLMs
+title: TEXTGRAD - Revolutionizing Large Language Models with Automatic Differentiation via Text
 date: 2024-06-12 20:00
 summary: Artificial Intelligence (AI) is constantly evolving, and one of the latest breakthroughs is the introduction of TEXTGRAD, a novel framework that utilizes automatic differentiation via text to optimize various components within AI systems. Developed by researchers at Stanford University, TEXTGRAD is designed to improve the performance of Large Language Models (LLMs) by leveraging natural language feedback. 
 categories: General
@@ -37,9 +37,9 @@ $$
 \frac{\partial \text{Evaluation}}{\partial \text{Prediction}} = \nabla_{\text{LLM}}(\text{Prediction}, \text{Evaluation})
 $$
 
-```math
+$$
 \frac{\partial \text{Evaluation}}{\partial \text{Prompt}} = \frac{\partial \text{Evaluation}}{\partial \text{Prediction}} \circ \nabla_{\text{LLM}}(\text{Prompt}, \text{Prediction}, \frac{\partial \text{Evaluation}}{\partial \text{Prediction}})
-```
+$$
 
 Here, `\nabla_{\text{LLM}}` represents the gradient operator when the forward function is an LLM call, returning natural language feedback such as "This prediction can be improved by...".
 
@@ -47,17 +47,17 @@ Here, `\nabla_{\text{LLM}}` represents the gradient operator when the forward fu
 
 For more complex systems, TEXTGRAD treats the AI system as a computation graph with variables and functions. Each variable is updated based on feedback from its successors in the graph:
 
-```math
+$$
 \frac{\partial L}{\partial v} = \bigcup_{w \in \text{SuccessorsOf}(v)} \nabla_f \left( v, w, \frac{\partial L}{\partial w} \right)
-```
+$$
 
 where `L` is the loss function, `v` is a variable, and `\nabla_f` denotes the gradient function for a function `f`.
 
 To update any desired variable `v`, TEXTGRAD uses Textual Gradient Descent (TGD):
 
-```math
+$$
 v_{\text{new}} = \text{TGD.step}\left(v, \frac{\partial L}{\partial v}\right)
-```
+$$
 
 ### Applications of TEXTGRAD in LLMs
 
@@ -109,9 +109,9 @@ TEXTGRAD can optimize solutions to complex scientific questions by refining the 
 
 The objective function for the refinement looks like:
 
-```math
+$$
 \text{Solution Refinement Objective} = \text{LLM}(\text{Question} + \text{Solution} + \text{Test-time Instruction})
-```
+$$
 
 #### 3. Reasoning Enhancement
 
