--- a/_posts/2024-06-12-textgrad.md
+++ b/_posts/2024-06-12-textgrad.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: TEXTGRAD - Revolutionizing Large Language Models with Automatic Differentiation via Text
+title: TEXTGRAD - Revolutionizing LLMs with Automatic Differentiation via Text
 date: 2024-06-12 20:00
 summary: Artificial Intelligence (AI) is constantly evolving, and one of the latest breakthroughs is the introduction of TEXTGRAD, a novel framework that utilizes automatic differentiation via text to optimize various components within AI systems. Developed by researchers at Stanford University, TEXTGRAD is designed to improve the performance of Large Language Models (LLMs) by leveraging natural language feedback. 
 categories: General
