--- a/_posts/2024-06-12-textgrad.md
+++ b/_posts/2024-06-12-textgrad.md
@@ -37,11 +37,12 @@ $$
 \frac{\partial \text{Evaluation}}{\partial \text{Prediction}} = \nabla_{\text{LLM}}(\text{Prediction}, \text{Evaluation})
 $$
 
+
 $$
 \frac{\partial \text{Evaluation}}{\partial \text{Prompt}} = \frac{\partial \text{Evaluation}}{\partial \text{Prediction}} \circ \nabla_{\text{LLM}}(\text{Prompt}, \text{Prediction}, \frac{\partial \text{Evaluation}}{\partial \text{Prediction}})
 $$
 
-Here, `\nabla_{\text{LLM}}` represents the gradient operator when the forward function is an LLM call, returning natural language feedback such as "This prediction can be improved by...".
+Here, $$\nabla_{\text{LLM}}$$ represents the gradient operator when the forward function is an LLM call, returning natural language feedback such as "This prediction can be improved by...".
 
 #### General Framework
 
@@ -51,9 +52,9 @@ $$
 \frac{\partial L}{\partial v} = \bigcup_{w \in \text{SuccessorsOf}(v)} \nabla_f \left( v, w, \frac{\partial L}{\partial w} \right)
 $$
 
-where `L` is the loss function, `v` is a variable, and `\nabla_f` denotes the gradient function for a function `f`.
+where $$ L $$ is the loss function, $$ v $$ is a variable, and $$ \nabla_f $$ denotes the gradient function for a function $$ f $$.
 
-To update any desired variable `v`, TEXTGRAD uses Textual Gradient Descent (TGD):
+To update any desired variable $$ v $$, TEXTGRAD uses Textual Gradient Descent (TGD):
 
 $$
 v_{\text{new}} = \text{TGD.step}\left(v, \frac{\partial L}{\partial v}\right)
