--- a/_posts/2024-06-12-textgrad.md
+++ b/_posts/2024-06-12-textgrad.md
@@ -188,4 +188,5 @@ TEXTGRAD represents a significant advancement in the optimization of AI systems,
 
 To explore more about TEXTGRAD and its applications, visit the [TEXTGRAD GitHub repository](https://github.com/zou-group/textgrad).
 
+[![Hits](https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fcodeslord.github.io%2Fgeneral%2F2024%2F06%2F12%2Ftextgrad%2F&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false)](https://hits.seeyoufarm.com)
 ---
