--- a/_posts/2025-08-07-memory.md
+++ b/_posts/2025-08-07-memory.md
@@ -6,7 +6,7 @@ summary: Building a robust and scalable memory system for AI is far more than ju
 categories: AI, System Design
 ---
 
-<img src="https://i.ibb.co/rfby4vJH/Screenshot-2025-09-01-182855.png" alt="Memory is Hard" border="0">
+<img src="https://i.ibb.co/Kp6m0tm7/Screenshot-2025-09-01-183255.png" alt="Memory is hard" border="0">
 
 As we move from stateless, reactive AI models to truly intelligent systems that can learn and evolve, memory has become the cornerstone of this new architecture. However, creating a functional, scalable, and secure memory layer is a monumental engineering task. It's not just about saving information; it's about building a living system that can manage, process, and protect knowledge effectively.
 
